width on list items, and slidedown added

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ li.navBar {
     display: inline;
     padding: 5px 10px;
     margin-right: 5px;
-    font-size: 24px;
+    font-size: 2em;
     border-radius: 25px;
 }
 
